# investor-commitments

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: investors.py
backend/app/repositories/: investor_repository.py
backend/app/services/: investor_service.py
backend/data/: data.csv
backend/investor_commitments_backend/: database.py  main.py
backend/investor_commitments_backend/api/: investors.py
backend/investor_commitments_backend/models/: investor.py
backend/investor_commitments_backend/repositories/: investor_repository.py
backend/investor_commitments_backend/schemas/: investor.py
backend/investor_commitments_backend/services/: investor_service.py
backend/tests/: conftest.py  test_api.py  test_models.py  test_repositories.py  test_services.py
frontend/: .eslintrc.json  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  environment.ts  setupTests.ts
frontend/src/api/: investors.ts  types.ts
frontend/src/api/__tests__/: investors.test.ts
frontend/src/components/CommitmentDetails/: CommitmentFilters.tsx  CommitmentTable.tsx
frontend/src/components/CommitmentDetails/__tests__/: CommitmentFilters.test.tsx  CommitmentTable.test.tsx
frontend/src/components/Dashboard/: Dashboard.tsx
frontend/src/components/Dashboard/__tests__/: Dashboard.test.tsx
frontend/src/components/InvestorList/: InvestorCard.tsx  InvestorList.tsx
frontend/src/components/InvestorList/__tests__/: InvestorCard.test.tsx  (+1 more)
